Configuration and auth

--- a/Consolegram.Local/Consolegram.Local.csproj
+++ b/Consolegram.Local/Consolegram.Local.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\Consolegram\Consolegram.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    </ItemGroup>
+
 </Project>
